specs/001-typescript-to-zig-native/examples/valid/if-else.ts
const ready = true;

if (ready) {
  console.log("yes");
} else {
  console.log("no");
}
