specs/001-typescript-to-zig-native/examples/invalid/comparison-type.ts
if (1 < "x") {
  console.log("bad");
}
